fixtures/parser/invalid/statements_misc_invalid.php
<?php
// invalid: catch block is missing a body

try {
    echo "open";
} catch (RuntimeException $e)
